src/server/snapshots/spycatcher_harness__server__replay_handler__tests__internal.snap
---
source: src/server/replay_handler.rs
expression: value
---
{
  "case": "internal",
  "status": 502,
  "body": {
    "error": {
      "kind": "internal",
      "message": "replay request failed"
    }
  }
}
