src/server/snapshots/spycatcher_harness__server__replay_handler__tests__malformed_json.snap
---
source: src/server/replay_handler.rs
expression: value
---
{
  "case": "malformed_json",
  "status": 400,
  "body": {
    "error": {
      "kind": "malformed_json",
      "message": "chat completions replay requires a valid JSON request body"
    }
  }
}
