src/server/snapshots/spycatcher_harness__server__replay_handler__tests__stream_cassette_required.snap
---
source: src/server/replay_handler.rs
expression: value
---
{
  "case": "stream_cassette_required",
  "status": 501,
  "body": {
    "error": {
      "kind": "stream_cassette_required",
      "message": "streaming chat completions replay requires a recorded stream response"
    }
  }
}
