src/server/snapshots/spycatcher_harness__server__replay_handler__tests__unsupported_stream.snap
---
source: src/server/replay_handler.rs
expression: value
---
{
  "case": "unsupported_stream",
  "status": 501,
  "body": {
    "error": {
      "kind": "unsupported_stream",
      "message": "streaming chat completions replay is not implemented yet"
    }
  }
}
